<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        tools:context=".MainActivity" android:gravity="center_horizontal">

    <com.awesome.awesomeview.customViews.AwesomeButton
            android:id="@+id/awesome_button_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/say_awesome_text"
            android:layout_margin="10dp"/>

    <com.awesome.awesomeview.customViews.AwesomeButton
            android:id="@+id/awesome_button_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shout_awesome_text"
            android:layout_margin="10dp"/>

    <com.awesome.awesomeview.customViews.AwesomeButton
            android:id="@+id/awesome_button_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/talk_awesome_text"
            android:layout_margin="10dp"/>

    <com.awesome.awesomeview.customViews.AwesomeButton
            android:id="@+id/awesome_button_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whisper_awesome_text"
            android:layout_margin="10dp"/>

    <com.awesome.awesomeview.customViews.AwesomeButton
            android:id="@+id/awesome_button_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/be_awesome_text"
            android:layout_margin="10dp"/>

    <com.awesome.awesomeview.customViews.AwesomeButton
            android:id="@+id/awesome_button_six"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stay_awesome_text"
            android:layout_margin="10dp"/>


    <com.awesome.awesomeview.customViews.AwesomeButton
            android:id="@+id/awesome_button_seven"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fight_awesome_text"
            android:layout_margin="10dp"/>


    <com.awesome.awesomeview.customViews.AwesomeButton
            android:id="@+id/awesome_button_eight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_awesome_text"
            android:layout_margin="10dp"
            app:token_font_color_two="@android:color/background_dark"/>

</LinearLayout>